--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Chat App</h1>
     <form id="form">
-        <input name="message" type="text" placeholder="message">
-        <button>Send</button>
+        <input id="message-input" name="message" type="text" placeholder="message">
+        <button id="message-btn">Send</button>
     </form>
     <button id="send-location">Send Location</button>
     <script src="/socket.io/socket.io.js"></script>
